src/tui/tests/snapshots/keyring_cli__tui__tests__wizard_snapshot_tests__wizard_reset_snapshot.snap
---
source: src/tui/tests/wizard_snapshot_tests.rs
expression: state
---
WizardState {
    step: MasterPassword,
    passkey_choice: Some(
        GenerateNew,
    ),
    passkey_words: Some(
        [
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
        ],
    ),
    master_password: Some(
        "password",
    ),
    confirmed: true,
    keystore_path: None,
    error: None,
}
