src/tui/tests/snapshots/keyring_cli__tui__tests__wizard_snapshot_tests__wizard_state_sequence.snap
---
source: src/tui/tests/wizard_snapshot_tests.rs
expression: seq.to_string()
---
Sequence: wizard_generate_flow

Step 1: initial
──────────────
WizardState { step: Welcome, passkey_choice: None, passkey_words: None, master_password: None, master_password_confirm: None, verify_positions: None, verify_answers: None, password_policy: PasswordPolicyConfig { default_type: Random, default_length: 16, min_digits: 2, min_special: 1 }, clipboard_timeout: Seconds30, trash_retention: Days30, skip_import: true, confirmed: false, keystore_path: None, error: None }

Step 2: choice_set
─────────────────
WizardState { step: Welcome, passkey_choice: Some(GenerateNew), passkey_words: None, master_password: None, master_password_confirm: None, verify_positions: None, verify_answers: None, password_policy: PasswordPolicyConfig { default_type: Random, default_length: 16, min_digits: 2, min_special: 1 }, clipboard_timeout: Seconds30, trash_retention: Days30, skip_import: true, confirmed: false, keystore_path: None, error: None }

Step 3: to_generate
──────────────────
WizardState { step: MasterPassword, passkey_choice: Some(GenerateNew), passkey_words: None, master_password: None, master_password_confirm: None, verify_positions: None, verify_answers: None, password_policy: PasswordPolicyConfig { default_type: Random, default_length: 16, min_digits: 2, min_special: 1 }, clipboard_timeout: Seconds30, trash_retention: Days30, skip_import: true, confirmed: false, keystore_path: None, error: None }

Step 4: words_set
────────────────
WizardState { step: MasterPassword, passkey_choice: Some(GenerateNew), passkey_words: Some(["word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word"]), master_password: None, master_password_confirm: None, verify_positions: None, verify_answers: None, password_policy: PasswordPolicyConfig { default_type: Random, default_length: 16, min_digits: 2, min_special: 1 }, clipboard_timeout: Seconds30, trash_retention: Days30, skip_import: true, confirmed: false, keystore_path: None, error: None }

Step 5: to_confirm
─────────────────
WizardState { step: MasterPassword, passkey_choice: Some(GenerateNew), passkey_words: Some(["word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word"]), master_password: None, master_password_confirm: None, verify_positions: None, verify_answers: None, password_policy: PasswordPolicyConfig { default_type: Random, default_length: 16, min_digits: 2, min_special: 1 }, clipboard_timeout: Seconds30, trash_retention: Days30, skip_import: true, confirmed: false, keystore_path: None, error: None }

Step 6: confirmed
────────────────
WizardState { step: MasterPassword, passkey_choice: Some(GenerateNew), passkey_words: Some(["word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word", "word"]), master_password: None, master_password_confirm: None, verify_positions: None, verify_answers: None, password_policy: PasswordPolicyConfig { default_type: Random, default_length: 16, min_digits: 2, min_special: 1 }, clipboard_timeout: Seconds30, trash_retention: Days30, skip_import: true, confirmed: true, keystore_path: None, error: None }
