src/tui/tests/snapshots/keyring_cli__tui__tests__wizard_snapshot_tests__wizard_step_transitions-2.snap
---
source: src/tui/tests/wizard_snapshot_tests.rs
expression: state.step.name()
---
Generate Passkey
